[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/graphics/materials/isisian_level.material" type="Material" id=1]
[ext_resource path="res://objects/door/Door.gd" type="Script" id=2]

[sub_resource type="ArrayMesh" id=1]
resource_name = "Door Left"
surfaces/0 = {
"aabb": AABB( -3.63588e-06, 0, 0, 1.00001, 2.50001, 0.25 ),
"array_data": PoolByteArray( 0, 0, 116, 182, 252, 255, 31, 64, 0, 0, 0, 128, 0, 0, 130, 0, 129, 0, 0, 127, 255, 59, 0, 52, 0, 0, 116, 182, 252, 255, 31, 64, 0, 0, 0, 128, 0, 127, 0, 0, 0, 0, 127, 127, 128, 58, 255, 54, 0, 0, 244, 181, 248, 255, 159, 63, 0, 0, 0, 128, 0, 0, 129, 0, 129, 0, 0, 127, 255, 59, 0, 54, 0, 0, 244, 181, 248, 255, 159, 63, 0, 0, 0, 128, 0, 0, 130, 0, 130, 0, 0, 127, 255, 59, 255, 53, 0, 0, 128, 63, 8, 0, 160, 63, 0, 0, 0, 128, 0, 0, 129, 0, 129, 0, 0, 127, 0, 59, 0, 54, 0, 0, 128, 63, 8, 0, 160, 63, 0, 0, 0, 128, 0, 0, 130, 0, 129, 0, 0, 127, 0, 59, 255, 53, 225, 255, 127, 63, 4, 0, 32, 64, 0, 0, 0, 128, 0, 0, 130, 0, 130, 0, 0, 127, 0, 59, 0, 52, 15, 0, 128, 63, 0, 0, 240, 53, 0, 0, 0, 128, 0, 0, 129, 0, 129, 0, 0, 127, 0, 59, 255, 55, 0, 0, 0, 0, 0, 0, 192, 63, 0, 0, 128, 62, 129, 0, 0, 0, 0, 0, 127, 127, 255, 58, 0, 53, 0, 0, 0, 0, 0, 0, 192, 63, 0, 0, 128, 62, 129, 0, 0, 0, 0, 0, 127, 127, 255, 58, 255, 53, 0, 0, 128, 62, 0, 0, 0, 0, 0, 0, 0, 128, 0, 129, 0, 0, 0, 0, 129, 127, 255, 58, 255, 53, 0, 0, 128, 62, 0, 0, 0, 0, 0, 0, 0, 128, 0, 129, 0, 0, 0, 0, 129, 127, 255, 58, 0, 54, 0, 0, 64, 63, 0, 0, 0, 0, 0, 0, 0, 128, 0, 129, 0, 0, 0, 0, 129, 127, 255, 58, 255, 52, 0, 0, 64, 63, 0, 0, 0, 0, 0, 0, 0, 128, 0, 129, 0, 0, 0, 0, 129, 127, 255, 58, 0, 53, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 128, 62, 0, 129, 0, 0, 0, 0, 129, 127, 128, 58, 0, 52, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 128, 62, 0, 0, 127, 0, 127, 0, 0, 127, 255, 59, 255, 55, 0, 0, 128, 63, 0, 0, 160, 63, 0, 0, 128, 62, 0, 0, 127, 0, 127, 0, 0, 127, 255, 59, 255, 53, 0, 0, 128, 63, 0, 0, 160, 63, 0, 0, 128, 62, 0, 0, 127, 0, 127, 0, 0, 127, 255, 59, 0, 54, 0, 0, 128, 63, 0, 0, 32, 64, 0, 0, 128, 62, 0, 0, 127, 0, 127, 0, 0, 127, 255, 59, 0, 52, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 129, 0, 0, 0, 0, 0, 127, 127, 128, 58, 255, 54, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0, 129, 0, 0, 0, 0, 129, 127, 255, 58, 255, 54, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0, 0, 129, 0, 129, 0, 0, 127, 255, 59, 255, 55, 0, 0, 0, 63, 0, 0, 0, 0, 0, 0, 128, 62, 0, 129, 0, 0, 0, 0, 129, 127, 128, 58, 0, 53, 0, 0, 0, 63, 0, 0, 0, 0, 0, 0, 128, 62, 0, 129, 0, 0, 0, 0, 129, 127, 128, 58, 255, 53, 0, 0, 0, 0, 0, 0, 128, 62, 0, 0, 0, 128, 129, 0, 0, 0, 0, 0, 127, 127, 128, 58, 255, 53, 0, 0, 0, 0, 0, 0, 128, 62, 0, 0, 0, 128, 129, 0, 0, 0, 0, 0, 127, 127, 128, 58, 0, 54, 0, 0, 0, 0, 0, 0, 128, 62, 0, 0, 128, 62, 129, 0, 0, 0, 0, 0, 127, 127, 255, 58, 255, 53, 0, 0, 0, 0, 0, 0, 128, 62, 0, 0, 128, 62, 129, 0, 0, 0, 0, 0, 127, 127, 255, 58, 0, 54, 0, 0, 0, 0, 0, 0, 0, 63, 0, 0, 0, 128, 129, 0, 0, 0, 0, 0, 127, 127, 128, 58, 0, 53, 0, 0, 0, 0, 0, 0, 0, 63, 0, 0, 0, 128, 129, 0, 0, 0, 0, 0, 127, 127, 128, 58, 255, 53, 0, 0, 0, 0, 0, 0, 0, 63, 0, 0, 128, 62, 129, 0, 0, 0, 0, 0, 127, 127, 255, 58, 0, 53, 0, 0, 0, 0, 0, 0, 0, 63, 0, 0, 128, 62, 129, 0, 0, 0, 0, 0, 127, 127, 255, 58, 255, 53, 0, 0, 0, 0, 0, 0, 64, 63, 0, 0, 0, 128, 129, 0, 0, 0, 0, 0, 127, 127, 128, 58, 0, 53, 0, 0, 0, 0, 0, 0, 64, 63, 0, 0, 0, 128, 129, 0, 0, 0, 0, 0, 127, 127, 128, 58, 255, 53, 0, 0, 0, 0, 0, 0, 64, 63, 0, 0, 128, 62, 129, 0, 0, 0, 0, 0, 127, 127, 255, 58, 0, 53, 0, 0, 0, 0, 0, 0, 64, 63, 0, 0, 128, 62, 129, 0, 0, 0, 0, 0, 127, 127, 255, 58, 255, 53, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 0, 128, 129, 0, 0, 0, 0, 0, 127, 127, 128, 58, 0, 53, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 0, 128, 129, 0, 0, 0, 0, 0, 127, 127, 128, 58, 255, 53, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 128, 62, 129, 0, 0, 0, 0, 0, 127, 127, 255, 58, 0, 53, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 128, 62, 129, 0, 0, 0, 0, 0, 127, 127, 255, 58, 255, 53, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 62, 129, 0, 0, 0, 0, 0, 127, 127, 255, 58, 255, 54, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 62, 0, 129, 0, 0, 0, 0, 129, 127, 128, 58, 255, 54, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 62, 0, 0, 127, 0, 127, 0, 0, 127, 0, 59, 255, 55, 0, 0, 0, 0, 0, 0, 160, 63, 0, 0, 128, 62, 129, 0, 0, 0, 0, 0, 127, 127, 255, 58, 0, 53, 0, 0, 0, 0, 0, 0, 160, 63, 0, 0, 128, 62, 129, 0, 0, 0, 0, 0, 127, 127, 255, 58, 255, 53, 0, 0, 0, 0, 0, 0, 160, 63, 0, 0, 128, 62, 0, 0, 127, 0, 127, 0, 0, 127, 0, 59, 255, 53, 0, 0, 0, 0, 0, 0, 160, 63, 0, 0, 128, 62, 0, 0, 127, 0, 127, 0, 0, 127, 0, 59, 0, 54, 0, 0, 0, 0, 0, 0, 160, 63, 0, 0, 0, 128, 129, 0, 0, 0, 0, 0, 127, 127, 128, 58, 0, 53, 0, 0, 0, 0, 0, 0, 160, 63, 0, 0, 0, 128, 129, 0, 0, 0, 0, 0, 127, 127, 128, 58, 255, 53, 0, 0, 0, 0, 0, 0, 192, 63, 0, 0, 0, 128, 129, 0, 0, 0, 0, 0, 127, 127, 128, 58, 0, 53, 0, 0, 0, 0, 0, 0, 192, 63, 0, 0, 0, 128, 129, 0, 0, 0, 0, 0, 127, 127, 128, 58, 255, 53, 0, 0, 0, 0, 0, 0, 224, 63, 0, 0, 128, 62, 129, 0, 0, 0, 0, 0, 127, 127, 255, 58, 0, 53, 0, 0, 0, 0, 0, 0, 224, 63, 0, 0, 128, 62, 129, 0, 0, 0, 0, 0, 127, 127, 255, 58, 255, 53, 0, 0, 0, 0, 0, 0, 224, 63, 0, 0, 0, 128, 129, 0, 0, 0, 0, 0, 127, 127, 128, 58, 0, 53, 0, 0, 0, 0, 0, 0, 224, 63, 0, 0, 0, 128, 129, 0, 0, 0, 0, 0, 127, 127, 128, 58, 255, 53, 0, 0, 0, 0, 0, 0, 0, 64, 0, 0, 128, 62, 129, 0, 0, 0, 0, 0, 127, 127, 255, 58, 0, 53, 0, 0, 0, 0, 0, 0, 0, 64, 0, 0, 128, 62, 129, 0, 0, 0, 0, 0, 127, 127, 255, 58, 255, 53, 0, 0, 0, 0, 0, 0, 0, 64, 0, 0, 0, 128, 129, 0, 0, 0, 0, 0, 127, 127, 128, 58, 0, 53, 0, 0, 0, 0, 0, 0, 0, 64, 0, 0, 0, 128, 129, 0, 0, 0, 0, 0, 127, 127, 128, 58, 255, 53, 0, 0, 0, 0, 0, 0, 16, 64, 0, 0, 128, 62, 129, 0, 0, 0, 0, 0, 127, 127, 255, 58, 255, 52, 0, 0, 0, 0, 0, 0, 16, 64, 0, 0, 128, 62, 129, 0, 0, 0, 0, 0, 127, 127, 255, 58, 0, 53, 0, 0, 0, 0, 0, 0, 16, 64, 0, 0, 0, 128, 129, 0, 0, 0, 0, 0, 127, 127, 128, 58, 255, 52, 0, 0, 0, 0, 0, 0, 16, 64, 0, 0, 0, 128, 129, 0, 0, 0, 0, 0, 127, 127, 128, 58, 0, 53, 0, 0, 0, 0, 0, 0, 32, 64, 0, 0, 128, 62, 129, 0, 0, 0, 0, 0, 127, 127, 255, 58, 0, 52, 0, 0, 0, 0, 0, 0, 32, 64, 0, 0, 128, 62, 0, 0, 127, 0, 127, 0, 0, 127, 0, 59, 0, 52, 0, 0, 0, 0, 0, 0, 32, 64, 0, 0, 0, 128, 129, 0, 0, 0, 0, 0, 127, 127, 128, 58, 0, 52, 0, 0, 128, 62, 0, 0, 0, 0, 0, 0, 128, 62, 0, 129, 0, 0, 0, 0, 129, 127, 128, 58, 255, 53, 0, 0, 128, 62, 0, 0, 0, 0, 0, 0, 128, 62, 0, 129, 0, 0, 0, 0, 129, 127, 128, 58, 0, 54, 0, 0, 0, 63, 0, 0, 0, 0, 0, 0, 0, 128, 0, 129, 0, 0, 0, 0, 129, 127, 255, 58, 0, 53, 0, 0, 0, 63, 0, 0, 0, 0, 0, 0, 0, 128, 0, 129, 0, 0, 0, 0, 129, 127, 255, 58, 255, 53, 0, 0, 64, 63, 0, 0, 0, 0, 0, 0, 128, 62, 0, 129, 0, 0, 0, 0, 129, 127, 128, 58, 255, 52, 0, 0, 64, 63, 0, 0, 0, 0, 0, 0, 128, 62, 0, 129, 0, 0, 0, 0, 129, 127, 128, 58, 0, 53, 195, 255, 63, 63, 252, 255, 31, 64, 0, 0, 128, 62, 0, 127, 0, 0, 0, 0, 127, 127, 255, 58, 255, 52, 195, 255, 63, 63, 252, 255, 31, 64, 0, 0, 128, 62, 0, 127, 0, 0, 0, 0, 127, 127, 255, 58, 0, 53, 0, 0, 116, 182, 252, 255, 31, 64, 0, 0, 128, 62, 0, 127, 0, 0, 0, 0, 127, 127, 255, 58, 255, 54, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 0, 128, 0, 129, 0, 0, 0, 0, 129, 127, 255, 58, 0, 52, 12, 255, 127, 62, 252, 255, 31, 64, 0, 0, 0, 128, 0, 127, 0, 0, 0, 0, 127, 127, 128, 58, 255, 53, 12, 255, 127, 62, 252, 255, 31, 64, 0, 0, 0, 128, 0, 127, 0, 0, 0, 0, 127, 127, 128, 58, 0, 54, 12, 255, 127, 62, 252, 255, 31, 64, 0, 0, 128, 62, 0, 127, 0, 0, 0, 0, 127, 127, 255, 58, 255, 53, 12, 255, 127, 62, 252, 255, 31, 64, 0, 0, 128, 62, 0, 127, 0, 0, 0, 0, 127, 127, 255, 58, 0, 54, 134, 255, 255, 62, 252, 255, 31, 64, 0, 0, 128, 62, 0, 127, 0, 0, 0, 0, 127, 127, 255, 58, 0, 53, 134, 255, 255, 62, 252, 255, 31, 64, 0, 0, 128, 62, 0, 127, 0, 0, 0, 0, 127, 127, 255, 58, 255, 53, 134, 255, 255, 62, 252, 255, 31, 64, 0, 0, 0, 128, 0, 127, 0, 0, 0, 0, 127, 127, 128, 58, 0, 53, 134, 255, 255, 62, 252, 255, 31, 64, 0, 0, 0, 128, 0, 127, 0, 0, 0, 0, 127, 127, 128, 58, 255, 53, 195, 255, 63, 63, 252, 255, 31, 64, 0, 0, 0, 128, 0, 127, 0, 0, 0, 0, 127, 127, 128, 58, 255, 52, 195, 255, 63, 63, 252, 255, 31, 64, 0, 0, 0, 128, 0, 127, 0, 0, 0, 0, 127, 127, 128, 58, 0, 53, 195, 255, 127, 63, 252, 255, 31, 64, 0, 0, 128, 62, 0, 127, 0, 0, 0, 0, 127, 127, 255, 58, 0, 52, 195, 255, 127, 63, 252, 255, 31, 64, 0, 0, 0, 128, 0, 127, 0, 0, 0, 0, 127, 127, 128, 58, 0, 52 ),
"array_index_data": PoolByteArray( 6, 0, 3, 0, 5, 0, 6, 0, 0, 0, 3, 0, 4, 0, 21, 0, 7, 0, 4, 0, 2, 0, 21, 0, 42, 0, 17, 0, 15, 0, 42, 0, 46, 0, 17, 0, 45, 0, 18, 0, 16, 0, 45, 0, 64, 0, 18, 0, 19, 0, 27, 0, 40, 0, 19, 0, 25, 0, 27, 0, 24, 0, 30, 0, 26, 0, 24, 0, 28, 0, 30, 0, 29, 0, 34, 0, 31, 0, 29, 0, 32, 0, 34, 0, 33, 0, 38, 0, 35, 0, 33, 0, 36, 0, 38, 0, 37, 0, 43, 0, 39, 0, 37, 0, 47, 0, 43, 0, 48, 0, 8, 0, 44, 0, 48, 0, 49, 0, 8, 0, 50, 0, 51, 0, 9, 0, 50, 0, 53, 0, 51, 0, 54, 0, 55, 0, 52, 0, 54, 0, 57, 0, 55, 0, 58, 0, 60, 0, 56, 0, 58, 0, 62, 0, 60, 0, 61, 0, 63, 0, 59, 0, 61, 0, 65, 0, 63, 0, 41, 0, 11, 0, 20, 0, 41, 0, 67, 0, 11, 0, 66, 0, 68, 0, 10, 0, 66, 0, 22, 0, 68, 0, 23, 0, 13, 0, 69, 0, 23, 0, 71, 0, 13, 0, 70, 0, 75, 0, 12, 0, 70, 0, 14, 0, 75, 0, 1, 0, 79, 0, 74, 0, 1, 0, 77, 0, 79, 0, 76, 0, 80, 0, 78, 0, 76, 0, 82, 0, 80, 0, 83, 0, 73, 0, 81, 0, 83, 0, 85, 0, 73, 0, 84, 0, 86, 0, 72, 0, 84, 0, 87, 0, 86, 0 ),
"blend_shape_data": [  ],
"format": 97559,
"index_count": 132,
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 88
}

[sub_resource type="ConcavePolygonShape" id=3]
data = PoolVector3Array( 1, 2.5, 0, 0, 1.25, 0, 1, 1.25, 0, 1, 2.5, 0, 0, 2.5, 0, 0, 1.25, 0, 1, 1.25, 0, 0, 0, 0, 1, 0, 0, 1, 1.25, 0, 0, 1.25, 0, 0, 0, 0, 0, 0, 0.25, 1, 1.25, 0.25, 1, 0, 0.25, 0, 0, 0.25, 0, 1.25, 0.25, 1, 1.25, 0.25, 0, 1.25, 0.25, 1, 2.5, 0.25, 1, 1.25, 0.25, 0, 1.25, 0.25, 0, 2.5, 0.25, 1, 2.5, 0.25, 0, 0, 0, 0, 0.25, 0.25, 0, 0, 0.25, 0, 0, 0, 0, 0.25, 0, 0, 0.25, 0.25, 0, 0.25, 0, 0, 0.5, 0.25, 0, 0.25, 0.25, 0, 0.25, 0, 0, 0.5, 0, 0, 0.5, 0.25, 0, 0.5, 0, 0, 0.75, 0.25, 0, 0.5, 0.25, 0, 0.5, 0, 0, 0.75, 0, 0, 0.75, 0.25, 0, 0.75, 0, 0, 1, 0.25, 0, 0.75, 0.25, 0, 0.75, 0, 0, 1, 0, 0, 1, 0.25, 0, 1, 0, 0, 1.25, 0.25, 0, 1, 0.25, 0, 1, 0, 0, 1.25, 0, 0, 1.25, 0.25, 0, 1.25, 0, 0, 1.5, 0.25, 0, 1.25, 0.25, 0, 1.25, 0, 0, 1.5, 0, 0, 1.5, 0.25, 0, 1.5, 0, 0, 1.75, 0.25, 0, 1.5, 0.25, 0, 1.5, 0, 0, 1.75, 0, 0, 1.75, 0.25, 0, 1.75, 0, 0, 2, 0.25, 0, 1.75, 0.25, 0, 1.75, 0, 0, 2, 0, 0, 2, 0.25, 0, 2, 0, 0, 2.25, 0.25, 0, 2, 0.25, 0, 2, 0, 0, 2.25, 0, 0, 2.25, 0.25, 0, 2.25, 0, 0, 2.5, 0.25, 0, 2.25, 0.25, 0, 2.25, 0, 0, 2.5, 0, 0, 2.5, 0.25, 0, 0, 0.25, 0.25, 0, 0, 0, 0, 0, 0, 0, 0.25, 0.25, 0, 0.25, 0.25, 0, 0, 0.25, 0, 0.25, 0.5, 0, 0, 0.25, 0, 0, 0.25, 0, 0.25, 0.5, 0, 0.25, 0.5, 0, 0, 0.5, 0, 0.25, 0.75, 0, 0, 0.5, 0, 0, 0.5, 0, 0.25, 0.75, 0, 0.25, 0.75, 0, 0, 0.75, 0, 0.25, 1, 0, 0, 0.75, 0, 0, 0.75, 0, 0.25, 1, 0, 0.25, 1, 0, 0, 0, 2.5, 0, 0.25, 2.5, 0.25, 0, 2.5, 0.25, 0, 2.5, 0, 0.25, 2.5, 0, 0.25, 2.5, 0.25, 0.25, 2.5, 0, 0.5, 2.5, 0.25, 0.25, 2.5, 0.25, 0.25, 2.5, 0, 0.5, 2.5, 0, 0.5, 2.5, 0.25, 0.5, 2.5, 0, 0.75, 2.5, 0.25, 0.5, 2.5, 0.25, 0.5, 2.5, 0, 0.75, 2.5, 0, 0.75, 2.5, 0.25, 0.75, 2.5, 0, 1, 2.5, 0.25, 0.75, 2.5, 0.25, 0.75, 2.5, 0, 1, 2.5, 0, 1, 2.5, 0.25 )

[sub_resource type="ArrayMesh" id=2]
resource_name = "Door Right"
surfaces/0 = {
"aabb": AABB( -1.00001, 0, 0, 1.00002, 2.50001, 0.25 ),
"array_data": PoolByteArray( 0, 0, 0, 0, 252, 255, 31, 64, 0, 0, 0, 128, 0, 0, 130, 0, 127, 0, 0, 129, 255, 59, 0, 52, 0, 0, 0, 0, 252, 255, 31, 64, 0, 0, 0, 128, 0, 127, 0, 0, 0, 0, 127, 129, 128, 58, 255, 54, 0, 0, 224, 181, 248, 255, 159, 63, 0, 0, 0, 128, 0, 0, 130, 0, 127, 0, 0, 129, 255, 59, 255, 53, 0, 0, 224, 181, 248, 255, 159, 63, 0, 0, 0, 128, 0, 0, 130, 0, 127, 0, 0, 129, 255, 59, 0, 54, 30, 0, 128, 191, 8, 0, 160, 63, 0, 0, 0, 128, 0, 0, 130, 0, 127, 0, 0, 129, 0, 59, 255, 53, 30, 0, 128, 191, 8, 0, 160, 63, 0, 0, 0, 128, 0, 0, 130, 0, 127, 0, 0, 129, 0, 59, 0, 54, 14, 0, 128, 191, 4, 0, 32, 64, 0, 0, 0, 128, 0, 0, 130, 0, 127, 0, 0, 129, 0, 59, 0, 52, 44, 0, 128, 191, 0, 0, 240, 53, 0, 0, 0, 128, 0, 0, 130, 0, 127, 0, 0, 129, 0, 59, 255, 55, 0, 0, 112, 182, 0, 0, 192, 63, 0, 0, 128, 62, 127, 0, 0, 0, 0, 0, 127, 129, 255, 58, 0, 53, 0, 0, 112, 182, 0, 0, 192, 63, 0, 0, 128, 62, 127, 0, 0, 0, 0, 0, 127, 129, 255, 58, 255, 53, 120, 0, 128, 190, 0, 0, 0, 0, 0, 0, 0, 128, 0, 129, 0, 0, 0, 0, 129, 129, 255, 58, 255, 53, 120, 0, 128, 190, 0, 0, 0, 0, 0, 0, 0, 128, 0, 129, 0, 0, 0, 0, 129, 129, 255, 58, 0, 54, 60, 0, 64, 191, 0, 0, 0, 0, 0, 0, 0, 128, 0, 129, 0, 0, 0, 0, 129, 129, 255, 58, 255, 52, 60, 0, 64, 191, 0, 0, 0, 0, 0, 0, 0, 128, 0, 129, 0, 0, 0, 0, 129, 129, 255, 58, 0, 53, 30, 0, 128, 191, 0, 0, 0, 0, 0, 0, 128, 62, 0, 129, 0, 0, 0, 0, 129, 129, 128, 58, 0, 52, 30, 0, 128, 191, 0, 0, 0, 0, 0, 0, 128, 62, 0, 0, 127, 0, 129, 0, 0, 129, 255, 59, 255, 55, 30, 0, 128, 191, 0, 0, 160, 63, 0, 0, 128, 62, 0, 0, 127, 0, 129, 0, 0, 129, 255, 59, 255, 53, 30, 0, 128, 191, 0, 0, 160, 63, 0, 0, 128, 62, 0, 0, 127, 0, 129, 0, 0, 129, 255, 59, 0, 54, 30, 0, 128, 191, 0, 0, 32, 64, 0, 0, 128, 62, 0, 0, 127, 0, 129, 0, 0, 129, 255, 59, 0, 52, 0, 0, 112, 182, 0, 0, 0, 0, 0, 0, 0, 128, 0, 129, 0, 0, 0, 0, 129, 129, 255, 58, 255, 54, 0, 0, 112, 182, 0, 0, 0, 0, 0, 0, 0, 128, 0, 0, 130, 0, 127, 0, 0, 129, 255, 59, 255, 55, 0, 0, 112, 182, 0, 0, 0, 0, 0, 0, 0, 128, 127, 0, 0, 0, 0, 0, 127, 129, 128, 58, 255, 54, 60, 0, 0, 191, 0, 0, 0, 0, 0, 0, 128, 62, 0, 129, 0, 0, 0, 0, 129, 129, 128, 58, 0, 53, 60, 0, 0, 191, 0, 0, 0, 0, 0, 0, 128, 62, 0, 129, 0, 0, 0, 0, 129, 129, 128, 58, 255, 53, 0, 0, 112, 182, 0, 0, 128, 62, 0, 0, 0, 128, 127, 0, 0, 0, 0, 0, 127, 129, 128, 58, 255, 53, 0, 0, 112, 182, 0, 0, 128, 62, 0, 0, 0, 128, 127, 0, 0, 0, 0, 0, 127, 129, 128, 58, 0, 54, 0, 0, 112, 182, 0, 0, 128, 62, 0, 0, 128, 62, 127, 0, 0, 0, 0, 0, 127, 129, 255, 58, 255, 53, 0, 0, 112, 182, 0, 0, 128, 62, 0, 0, 128, 62, 127, 0, 0, 0, 0, 0, 127, 129, 255, 58, 0, 54, 0, 0, 112, 182, 0, 0, 0, 63, 0, 0, 0, 128, 127, 0, 0, 0, 0, 0, 127, 129, 128, 58, 0, 53, 0, 0, 112, 182, 0, 0, 0, 63, 0, 0, 0, 128, 127, 0, 0, 0, 0, 0, 127, 129, 128, 58, 255, 53, 0, 0, 112, 182, 0, 0, 0, 63, 0, 0, 128, 62, 127, 0, 0, 0, 0, 0, 127, 129, 255, 58, 0, 53, 0, 0, 112, 182, 0, 0, 0, 63, 0, 0, 128, 62, 127, 0, 0, 0, 0, 0, 127, 129, 255, 58, 255, 53, 0, 0, 112, 182, 0, 0, 64, 63, 0, 0, 0, 128, 127, 0, 0, 0, 0, 0, 127, 129, 128, 58, 0, 53, 0, 0, 112, 182, 0, 0, 64, 63, 0, 0, 0, 128, 127, 0, 0, 0, 0, 0, 127, 129, 128, 58, 255, 53, 0, 0, 112, 182, 0, 0, 64, 63, 0, 0, 128, 62, 127, 0, 0, 0, 0, 0, 127, 129, 255, 58, 0, 53, 0, 0, 112, 182, 0, 0, 64, 63, 0, 0, 128, 62, 127, 0, 0, 0, 0, 0, 127, 129, 255, 58, 255, 53, 0, 0, 112, 182, 0, 0, 128, 63, 0, 0, 0, 128, 127, 0, 0, 0, 0, 0, 127, 129, 128, 58, 0, 53, 0, 0, 112, 182, 0, 0, 128, 63, 0, 0, 0, 128, 127, 0, 0, 0, 0, 0, 127, 129, 128, 58, 255, 53, 0, 0, 112, 182, 0, 0, 128, 63, 0, 0, 128, 62, 127, 0, 0, 0, 0, 0, 127, 129, 255, 58, 0, 53, 0, 0, 112, 182, 0, 0, 128, 63, 0, 0, 128, 62, 127, 0, 0, 0, 0, 0, 127, 129, 255, 58, 255, 53, 0, 0, 112, 182, 0, 0, 0, 0, 0, 0, 128, 62, 0, 129, 0, 0, 0, 0, 129, 129, 128, 58, 255, 54, 0, 0, 112, 182, 0, 0, 0, 0, 0, 0, 128, 62, 0, 0, 127, 0, 129, 0, 0, 129, 0, 59, 255, 55, 0, 0, 112, 182, 0, 0, 0, 0, 0, 0, 128, 62, 127, 0, 0, 0, 0, 0, 127, 129, 255, 58, 255, 54, 0, 0, 112, 182, 0, 0, 160, 63, 0, 0, 128, 62, 0, 0, 127, 0, 129, 0, 0, 129, 0, 59, 255, 53, 0, 0, 112, 182, 0, 0, 160, 63, 0, 0, 128, 62, 0, 0, 127, 0, 129, 0, 0, 129, 0, 59, 0, 54, 0, 0, 112, 182, 0, 0, 160, 63, 0, 0, 128, 62, 127, 0, 0, 0, 0, 0, 127, 129, 255, 58, 0, 53, 0, 0, 112, 182, 0, 0, 160, 63, 0, 0, 128, 62, 127, 0, 0, 0, 0, 0, 127, 129, 255, 58, 255, 53, 0, 0, 112, 182, 0, 0, 160, 63, 0, 0, 0, 128, 127, 0, 0, 0, 0, 0, 127, 129, 128, 58, 0, 53, 0, 0, 112, 182, 0, 0, 160, 63, 0, 0, 0, 128, 127, 0, 0, 0, 0, 0, 127, 129, 128, 58, 255, 53, 0, 0, 112, 182, 0, 0, 192, 63, 0, 0, 0, 128, 127, 0, 0, 0, 0, 0, 127, 129, 128, 58, 0, 53, 0, 0, 112, 182, 0, 0, 192, 63, 0, 0, 0, 128, 127, 0, 0, 0, 0, 0, 127, 129, 128, 58, 255, 53, 0, 0, 112, 182, 0, 0, 224, 63, 0, 0, 128, 62, 127, 0, 0, 0, 0, 0, 127, 129, 255, 58, 0, 53, 0, 0, 112, 182, 0, 0, 224, 63, 0, 0, 128, 62, 127, 0, 0, 0, 0, 0, 127, 129, 255, 58, 255, 53, 0, 0, 112, 182, 0, 0, 224, 63, 0, 0, 0, 128, 127, 0, 0, 0, 0, 0, 127, 129, 128, 58, 0, 53, 0, 0, 112, 182, 0, 0, 224, 63, 0, 0, 0, 128, 127, 0, 0, 0, 0, 0, 127, 129, 128, 58, 255, 53, 0, 0, 112, 182, 0, 0, 0, 64, 0, 0, 128, 62, 127, 0, 0, 0, 0, 0, 127, 129, 255, 58, 0, 53, 0, 0, 112, 182, 0, 0, 0, 64, 0, 0, 128, 62, 127, 0, 0, 0, 0, 0, 127, 129, 255, 58, 255, 53, 0, 0, 112, 182, 0, 0, 0, 64, 0, 0, 0, 128, 127, 0, 0, 0, 0, 0, 127, 129, 128, 58, 0, 53, 0, 0, 112, 182, 0, 0, 0, 64, 0, 0, 0, 128, 127, 0, 0, 0, 0, 0, 127, 129, 128, 58, 255, 53, 0, 0, 112, 182, 0, 0, 16, 64, 0, 0, 128, 62, 127, 0, 0, 0, 0, 0, 127, 129, 255, 58, 255, 52, 0, 0, 112, 182, 0, 0, 16, 64, 0, 0, 128, 62, 127, 0, 0, 0, 0, 0, 127, 129, 255, 58, 0, 53, 0, 0, 112, 182, 0, 0, 16, 64, 0, 0, 0, 128, 127, 0, 0, 0, 0, 0, 127, 129, 128, 58, 255, 52, 0, 0, 112, 182, 0, 0, 16, 64, 0, 0, 0, 128, 127, 0, 0, 0, 0, 0, 127, 129, 128, 58, 0, 53, 0, 0, 112, 182, 0, 0, 32, 64, 0, 0, 128, 62, 0, 0, 127, 0, 129, 0, 0, 129, 0, 59, 0, 52, 0, 0, 112, 182, 0, 0, 32, 64, 0, 0, 128, 62, 127, 0, 0, 0, 0, 0, 127, 129, 255, 58, 0, 52, 0, 0, 112, 182, 0, 0, 32, 64, 0, 0, 0, 128, 127, 0, 0, 0, 0, 0, 127, 129, 128, 58, 0, 52, 120, 0, 128, 190, 0, 0, 0, 0, 0, 0, 128, 62, 0, 129, 0, 0, 0, 0, 129, 129, 128, 58, 255, 53, 120, 0, 128, 190, 0, 0, 0, 0, 0, 0, 128, 62, 0, 129, 0, 0, 0, 0, 129, 129, 128, 58, 0, 54, 60, 0, 0, 191, 0, 0, 0, 0, 0, 0, 0, 128, 0, 129, 0, 0, 0, 0, 129, 129, 255, 58, 0, 53, 60, 0, 0, 191, 0, 0, 0, 0, 0, 0, 0, 128, 0, 129, 0, 0, 0, 0, 129, 129, 255, 58, 255, 53, 60, 0, 64, 191, 0, 0, 0, 0, 0, 0, 128, 62, 0, 129, 0, 0, 0, 0, 129, 129, 128, 58, 255, 52, 60, 0, 64, 191, 0, 0, 0, 0, 0, 0, 128, 62, 0, 129, 0, 0, 0, 0, 129, 129, 128, 58, 0, 53, 0, 0, 64, 191, 252, 255, 31, 64, 0, 0, 128, 62, 0, 127, 0, 0, 0, 0, 127, 129, 255, 58, 255, 52, 0, 0, 64, 191, 252, 255, 31, 64, 0, 0, 128, 62, 0, 127, 0, 0, 0, 0, 127, 129, 255, 58, 0, 53, 0, 0, 0, 0, 252, 255, 31, 64, 0, 0, 128, 62, 0, 127, 0, 0, 0, 0, 127, 129, 255, 58, 255, 54, 30, 0, 128, 191, 0, 0, 0, 0, 0, 0, 0, 128, 0, 129, 0, 0, 0, 0, 129, 129, 255, 58, 0, 52, 0, 0, 128, 190, 252, 255, 31, 64, 0, 0, 0, 128, 0, 127, 0, 0, 0, 0, 127, 129, 128, 58, 255, 53, 0, 0, 128, 190, 252, 255, 31, 64, 0, 0, 0, 128, 0, 127, 0, 0, 0, 0, 127, 129, 128, 58, 0, 54, 0, 0, 128, 190, 252, 255, 31, 64, 0, 0, 128, 62, 0, 127, 0, 0, 0, 0, 127, 129, 255, 58, 255, 53, 0, 0, 128, 190, 252, 255, 31, 64, 0, 0, 128, 62, 0, 127, 0, 0, 0, 0, 127, 129, 255, 58, 0, 54, 0, 0, 0, 191, 252, 255, 31, 64, 0, 0, 128, 62, 0, 127, 0, 0, 0, 0, 127, 129, 255, 58, 0, 53, 0, 0, 0, 191, 252, 255, 31, 64, 0, 0, 128, 62, 0, 127, 0, 0, 0, 0, 127, 129, 255, 58, 255, 53, 0, 0, 0, 191, 252, 255, 31, 64, 0, 0, 0, 128, 0, 127, 0, 0, 0, 0, 127, 129, 128, 58, 0, 53, 0, 0, 0, 191, 252, 255, 31, 64, 0, 0, 0, 128, 0, 127, 0, 0, 0, 0, 127, 129, 128, 58, 255, 53, 0, 0, 64, 191, 252, 255, 31, 64, 0, 0, 0, 128, 0, 127, 0, 0, 0, 0, 127, 129, 128, 58, 255, 52, 0, 0, 64, 191, 252, 255, 31, 64, 0, 0, 0, 128, 0, 127, 0, 0, 0, 0, 127, 129, 128, 58, 0, 53, 0, 0, 128, 191, 252, 255, 31, 64, 0, 0, 128, 62, 0, 127, 0, 0, 0, 0, 127, 129, 255, 58, 0, 52, 0, 0, 128, 191, 252, 255, 31, 64, 0, 0, 0, 128, 0, 127, 0, 0, 0, 0, 127, 129, 128, 58, 0, 52 ),
"array_index_data": PoolByteArray( 6, 0, 2, 0, 0, 0, 6, 0, 4, 0, 2, 0, 5, 0, 20, 0, 3, 0, 5, 0, 7, 0, 20, 0, 41, 0, 17, 0, 44, 0, 41, 0, 15, 0, 17, 0, 43, 0, 18, 0, 63, 0, 43, 0, 16, 0, 18, 0, 21, 0, 27, 0, 25, 0, 21, 0, 42, 0, 27, 0, 24, 0, 30, 0, 28, 0, 24, 0, 26, 0, 30, 0, 29, 0, 34, 0, 32, 0, 29, 0, 31, 0, 34, 0, 33, 0, 38, 0, 36, 0, 33, 0, 35, 0, 38, 0, 37, 0, 45, 0, 47, 0, 37, 0, 39, 0, 45, 0, 48, 0, 8, 0, 49, 0, 48, 0, 46, 0, 8, 0, 50, 0, 51, 0, 53, 0, 50, 0, 9, 0, 51, 0, 54, 0, 55, 0, 57, 0, 54, 0, 52, 0, 55, 0, 58, 0, 60, 0, 62, 0, 58, 0, 56, 0, 60, 0, 61, 0, 64, 0, 65, 0, 61, 0, 59, 0, 64, 0, 40, 0, 11, 0, 67, 0, 40, 0, 19, 0, 11, 0, 66, 0, 68, 0, 22, 0, 66, 0, 10, 0, 68, 0, 23, 0, 13, 0, 71, 0, 23, 0, 69, 0, 13, 0, 70, 0, 75, 0, 14, 0, 70, 0, 12, 0, 75, 0, 1, 0, 79, 0, 77, 0, 1, 0, 74, 0, 79, 0, 76, 0, 80, 0, 82, 0, 76, 0, 78, 0, 80, 0, 83, 0, 73, 0, 85, 0, 83, 0, 81, 0, 73, 0, 84, 0, 86, 0, 87, 0, 84, 0, 72, 0, 86, 0 ),
"blend_shape_data": [  ],
"format": 97559,
"index_count": 132,
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 88
}

[sub_resource type="ConcavePolygonShape" id=4]
data = PoolVector3Array( -1, 2.5, 0, 0, 1.25, 0, 0, 2.5, 0, -1, 2.5, 0, -1, 1.25, 0, 0, 1.25, 0, -1, 1.25, 0, 0, 0, 0, 0, 1.25, 0, -1, 1.25, 0, -1, 0, 0, 0, 0, 0, 0, 0, 0.25, -1, 1.25, 0.25, 0, 1.25, 0.25, 0, 0, 0.25, -1, 0, 0.25, -1, 1.25, 0.25, 0, 1.25, 0.25, -1, 2.5, 0.25, 0, 2.5, 0.25, 0, 1.25, 0.25, -1, 1.25, 0.25, -1, 2.5, 0.25, 0, 0, 0, 0, 0.25, 0.25, 0, 0.25, 0, 0, 0, 0, 0, 0, 0.25, 0, 0.25, 0.25, 0, 0.25, 0, 0, 0.5, 0.25, 0, 0.5, 0, 0, 0.25, 0, 0, 0.25, 0.25, 0, 0.5, 0.25, 0, 0.5, 0, 0, 0.75, 0.25, 0, 0.75, 0, 0, 0.5, 0, 0, 0.5, 0.25, 0, 0.75, 0.25, 0, 0.75, 0, 0, 1, 0.25, 0, 1, 0, 0, 0.75, 0, 0, 0.75, 0.25, 0, 1, 0.25, 0, 1, 0, 0, 1.25, 0.25, 0, 1.25, 0, 0, 1, 0, 0, 1, 0.25, 0, 1.25, 0.25, 0, 1.25, 0, 0, 1.5, 0.25, 0, 1.5, 0, 0, 1.25, 0, 0, 1.25, 0.25, 0, 1.5, 0.25, 0, 1.5, 0, 0, 1.75, 0.25, 0, 1.75, 0, 0, 1.5, 0, 0, 1.5, 0.25, 0, 1.75, 0.25, 0, 1.75, 0, 0, 2, 0.25, 0, 2, 0, 0, 1.75, 0, 0, 1.75, 0.25, 0, 2, 0.25, 0, 2, 0, 0, 2.25, 0.25, 0, 2.25, 0, 0, 2, 0, 0, 2, 0.25, 0, 2.25, 0.25, 0, 2.25, 0, 0, 2.5, 0.25, 0, 2.5, 0, 0, 2.25, 0, 0, 2.25, 0.25, 0, 2.5, 0.25, 0, 0, 0.25, -0.25, 0, 0, -0.25, 0, 0.25, 0, 0, 0.25, 0, 0, 0, -0.25, 0, 0, -0.25, 0, 0.25, -0.5, 0, 0, -0.5, 0, 0.25, -0.25, 0, 0.25, -0.25, 0, 0, -0.5, 0, 0, -0.5, 0, 0.25, -0.75, 0, 0, -0.75, 0, 0.25, -0.5, 0, 0.25, -0.5, 0, 0, -0.75, 0, 0, -0.75, 0, 0.25, -1, 0, 0, -1, 0, 0.25, -0.75, 0, 0.25, -0.75, 0, 0, -1, 0, 0, 0, 2.5, 0, -0.25, 2.5, 0.25, -0.25, 2.5, 0, 0, 2.5, 0, 0, 2.5, 0.25, -0.25, 2.5, 0.25, -0.25, 2.5, 0, -0.5, 2.5, 0.25, -0.5, 2.5, 0, -0.25, 2.5, 0, -0.25, 2.5, 0.25, -0.5, 2.5, 0.25, -0.5, 2.5, 0, -0.75, 2.5, 0.25, -0.75, 2.5, 0, -0.5, 2.5, 0, -0.5, 2.5, 0.25, -0.75, 2.5, 0.25, -0.75, 2.5, 0, -1, 2.5, 0.25, -1, 2.5, 0, -0.75, 2.5, 0, -0.75, 2.5, 0.25, -1, 2.5, 0.25 )

[sub_resource type="BoxShape" id=5]

[node name="Door" type="Spatial"]
script = ExtResource( 2 )

[node name="Tween_DL" type="Tween" parent="."]

[node name="Tween_DR" type="Tween" parent="."]

[node name="DoorLeft" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = ExtResource( 1 )

[node name="StaticBody" type="StaticBody" parent="DoorLeft"]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="DoorLeft/StaticBody"]
shape = SubResource( 3 )

[node name="DoorRight" type="MeshInstance" parent="."]
mesh = SubResource( 2 )
material/0 = ExtResource( 1 )

[node name="StaticBody" type="StaticBody" parent="DoorRight"]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="DoorRight/StaticBody"]
shape = SubResource( 4 )

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0.1 )
collision_layer = 0
collision_mask = 80

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 5 )
[connection signal="body_entered" from="Area" to="." method="_on_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_body_exited"]
